--- a/casFX/.classpath
+++ b/casFX/.classpath
@@ -3,11 +3,17 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/commons-cli.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/jna-3.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/logback-classic.jar"/>
+	<classpathentry kind="lib" path="lib/logback-core.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
 	<classpathentry kind="lib" path="lib/vlcj-3.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/vlcj-3.0.1-test-sources.jar"/>
 	<classpathentry kind="lib" path="lib/vlcj-3.0.1-tests.jar"/>
 	<classpathentry kind="lib" path="lib/vlcj-3.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/jna-3.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/xuggle-xuggler-test.jar"/>
+	<classpathentry kind="lib" path="lib/xuggle-xuggler.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
