--- a/casFX/.classpath
+++ b/casFX/.classpath
@@ -5,14 +5,9 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-cli.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="lib/jna-3.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/logback-classic.jar"/>
 	<classpathentry kind="lib" path="lib/logback-core.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
-	<classpathentry kind="lib" path="lib/vlcj-3.0.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/vlcj-3.0.1-test-sources.jar"/>
-	<classpathentry kind="lib" path="lib/vlcj-3.0.1-tests.jar"/>
-	<classpathentry kind="lib" path="lib/vlcj-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/xuggle-xuggler-test.jar"/>
 	<classpathentry kind="lib" path="lib/xuggle-xuggler.jar"/>
 	<classpathentry kind="lib" path="lib/sun-jai_codec.jar"/>
@@ -22,5 +17,18 @@
 	<classpathentry kind="lib" path="lib/sound.jar"/>
 	<classpathentry kind="lib" path="lib/jmf-2.1.1e.jar"/>
 	<classpathentry kind="lib" path="lib/libjitsi.jar"/>
+	<classpathentry kind="lib" path="lib/vlcj-3.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/vlcj-3.9.0-tests.jar"/>
+	<classpathentry kind="lib" path="lib/jna-4.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/vlcj-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/jffmpeg-1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/jna-platform-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.9-tests.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.9.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-nop-1.7.9.jar"/>
+	<classpathentry kind="lib" path="lib/xuggle-xuggler-4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
