--- a/casFX/.classpath
+++ b/casFX/.classpath
@@ -30,5 +30,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.9.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop-1.7.9.jar"/>
 	<classpathentry kind="lib" path="lib/xuggle-xuggler-4.jar"/>
+	<classpathentry kind="lib" path="lib/ffmpeg-2.7.1-1.0-windows-x86_64.jar"/>
+	<classpathentry kind="lib" path="lib/ffmpeg-2.7.1-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
